# news-traveler-server

./: .gitignore  .pylintrc  app.py  data_types.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  deploy.yml
backend/: app.py  config.py
news_traveler_document_similarity/: tfidf_similarity.py
news_traveler_sentiment_analysis/: sentiment_analysis.py
tests/news_traveler_document_similarity/: test_process_tfidf_similarity.py
tests/news_traveler_sentiment_analysis/: test_process_sentiment_analysis.py
