[tool.poetry]
name = "news-traveler-document-similarity"
version = "0.1.0"
description = ""
authors = ["JoannaWang1216 <joannaahj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
scikit-learn = "^1.1.2"
numpy = "^1.23.4"
transformers = "^4.23.1"
requests = "^2.28.1"
mypy = "^0.982"
types-requests = "^2.28.11.2"
flask = "^2.2.2"
newsdataapi = "^0.1.5"
python-dotenv = "^0.21.0"
vaderSentiment = "^3.3.2"
flask-caching = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
pylint = "^2.15.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
